syntax = "proto3";

option go_package = ".;protocol";

import "google/protobuf/timestamp.proto";

message RawChatMessageEvent{
  string message = 1;
}

message NewMessageEvent{
  enum Sender{
    A = 0;
    B = 1;
  }
  Sender sender = 2;
  RawChatMessageEvent raw = 3;
  google.protobuf.Timestamp timestamp = 4;
  int64 time_remaining = 5;
}